--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
