--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
+    "date-fns": "^3.2.0",
     "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
