--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-layout": "^1.4.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
-    "@types/mapbox__polyline": "^1.0.4"
+    "@types/mapbox__polyline": "^1.0.4",
+    "@types/react-grid-layout": "^1.3.5"
   }
 }
