--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/lru-cache": "^7.10.10",
     "@types/react": "^18.2.29",
     "@types/react-dom": "^18.2.14",
     "axios": "^1.5.1",
@@ -23,6 +24,7 @@
     "date-fns": "^3.2.0",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
+    "lru-cache": "^10.2.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
