--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
     "date-fns": "^3.2.0",
+    "feather-icons-react": "^0.7.0",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
     "lru-cache": "^10.2.0",
