--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
+    "concurrently": "^8.2.2",
     "date-fns": "^3.2.0",
     "feather-icons-react": "^0.7.0",
     "js-cookie": "^3.0.5",
@@ -38,7 +39,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"npm run start:node\"",
+    "start:react": "react-scripts start",
+    "start:node": "cd src/server && npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
