--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "csv-writer": "^1.6.0",
     "express": "^4.18.2",
     "node-gyp": "^10.0.1"
