--- a/src/server/constants/label_mapping.json
+++ b/src/server/constants/label_mapping.json
@@ -1,9 +1,9 @@
 {
-	"0": "easy",
-	"1": "session",
-	"2": "tempo",
-	"3": "long run",
-	"4": "x-train",
-	"5": "race",
-	"6": "hill session"
+	"0": "Easy",
+	"1": "Session",
+	"2": "Tempo",
+	"3": "Long Run",
+	"4": "X-Train",
+	"5": "Race",
+	"6": "Hill Session"
 }
