--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
     "concurrently": "^8.2.2",
-    "date-fns": "^3.2.0",
+    "date-fns": "^3.3.1",
     "feather-icons-react": "^0.7.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
@@ -31,6 +31,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-chartjs-2": "^5.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
