--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "date-fns": "^3.3.1",
+    "express": "^4.19.1",
     "feather-icons-react": "^0.7.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
