--- a/package.json
+++ b/package.json
@@ -22,11 +22,7 @@
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
-    "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
-    "csv-writer": "^1.6.0",
     "date-fns": "^3.3.1",
-    "express": "^4.19.1",
     "feather-icons-react": "^0.7.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
@@ -45,9 +41,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"react-scripts start\" \"npm run start:node\"",
-    "start:react": "react-scripts start",
-    "start:node": "cd src/server && npm start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
