--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chartjs-plugin-annotation": "^3.0.1",
     "date-fns": "^3.3.1",
     "feather-icons-react": "^0.7.0",
+    "firebase": "^9.23.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
@@ -35,6 +36,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
+    "reactfire": "^4.2.3",
     "redux-thunk": "^2.4.2",
     "simplify-js": "^1.2.4",
     "web-vitals": "^2.1.4"
