--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^9.23.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.0",
     "lru-cache": "^10.2.0",
     "react": "^18.2.0",
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/mapbox__polyline": "^1.0.4"
   }
 }
