--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "chart.js": "^4.4.1",
     "chartjs-plugin-annotation": "^3.0.1",
     "date-fns": "^3.3.1",
-    "feather-icons-react": "^0.7.0",
     "firebase": "^9.23.0",
     "framer-motion": "^11.0.6",
     "js-cookie": "^3.0.5",
@@ -34,6 +33,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
@@ -46,7 +46,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
     "extends": [
@@ -68,6 +69,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "@types/mapbox__polyline": "^1.0.4"
+    "@types/mapbox__polyline": "^1.0.4",
+    "source-map-explorer": "^2.5.3"
   }
 }
