--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.1",
 		"@emotion/styled": "^11.11.0",
+		"@langchain/openai": "^0.2.6",
 		"@mapbox/polyline": "^1.2.1",
 		"@reduxjs/toolkit": "^1.9.7",
 		"@testing-library/jest-dom": "^5.17.0",
@@ -23,6 +24,7 @@
 		"firebase": "^9.23.0",
 		"framer-motion": "^11.0.6",
 		"js-cookie": "^3.0.5",
+		"langchain": "^0.2.16",
 		"lottie-react": "^2.4.0",
 		"lru-cache": "^10.2.0",
 		"react": "^18.2.0",
